discussion/kv_engine/168534/168534_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50266: Add common warmup stats from one function

Rather than add them separately in two.

Change-Id: I37c97d10fe56e921bb27543eda493efb3afb91ba

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-01-11 14:54:00.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-01-11 14:54:15.000000000
Message: 
Patch Set 4:

(2 comments)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-11 14:56:51.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42711/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42711/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36195/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36195/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4383/ : ABORTED

Clang linker error: linker command failed due to signal (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4383/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4383/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4440/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4440/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16400/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16400/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16691/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16691/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15544/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24812/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24812/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17485/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17485/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14738/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:1914:14: error: out-of-line definition of "addCommonStats" does not match any declaration in "Warmup" [clang-diagnostic-error]
void Warmup::addCommonStats(const StatCollector& collector) const {
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.h:241:31: error: unknown type name "StatCollector" [clang-diagnostic-error]
    void addCommonStats(const StatCollector& collector) const;
                              ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14738/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:1914:14:
error: out-of-line definition of "addCommonStats" does not match any declaration in "Warmup" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14738/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13571/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13571/ )
----------------------------------------------------------------------------------------------------------------------
